--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header nav a {
 }
 
 header nav a:hover {
-    background-color: #ffeb3b;
+    background-color: #D68080;
     color: #0d47a1;
 }
 
