--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Estilo geral */
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, Arcade Classic;
     margin: 0;
     padding: 0;
     background: linear-gradient(to right, #e3f2fd, #bbdefb);
