--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* style.css */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -33,7 +32,7 @@ main {
 }
 
 .contas img {
-    width: 200px;
+    width: 150px; /* <- Diminuído aqui */
     height: auto;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
