--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 /* Cabeçalho mais moderno */
 header {
-    background: linear-gradient(135deg, #F12626, bd0000);
+    background-color: #DD2525;
     color: white;
     padding: 20px 0;
     text-align: center;
