--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ footer {
     padding: 15px;
     margin-top: 30px;
     font-size: 0.9em;
-    color: #080708;
+    color: #FFFFFF;
     box-shadow: 0 -2px 6px rgba(0,0,0,0.2);
 }
 
