--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 /* Cabeçalho mais moderno */
 header {
-    background: linear-gradient(135deg, #F02323, #981F1F);
+    background: linear-gradient(135deg, #080708, #221F22);
     color: white;
     padding: 20px 0;
     text-align: center;
