--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, arcade-classic;
     margin: 0;
     padding: 0;
-    background: linear-gradient(to right, #FFFFFF, #221F22);
+    background: linear-gradient(to right, #FFFFFF, #FFFFFF);
     color: #0a0a0a;
     text-align: center;
 }
