--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header nav {
 
 header nav a {
     display: inline-block;
-    color: #C62525;
+    color: #000000;
     margin: 0 15px;
     text-decoration: none;
     font-weight: bold;
@@ -39,7 +39,7 @@ header nav a {
 }
 
 header nav a:hover {
-    background-color: #BB2828;
+    background-color: #FFFFFF;
     color: #000000;
 }
 
