--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header nav {
 
 header nav a {
     display: inline-block;
-    color: #000000;
+    color: #FFFFFF;
     margin: 0 15px;
     text-decoration: none;
     font-weight: bold;
