--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ footer {
 .contato-form input,
 .contato-form textarea {
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #453006;
     border-radius: 6px;
     font-size: 1em;
     width: 100%;
@@ -98,7 +98,7 @@ footer {
 }
 
 .contato-form button {
-    background: #0d47a1;
+    background: #045e0b;
     color: white;
     padding: 10px;
     border: none;
@@ -109,5 +109,5 @@ footer {
 }
 
 .contato-form button:hover {
-    background: #1976d2;
+    background:#302e2e;
 }
