--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background: linear-gradient(to right,#9fa0a1, #0a0a0a);
+    background: linear-gradient(to right,#9fa0a1, #996e00);
     color: #333;
     text-align: center;
 }
