--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ main {
 }
 
 footer {
-    background-color: #ffffff;
+    background-color: #523b02;
     padding: 15px;
     margin-top: 30px;
 }
