--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ footer {
 }
 
 .filial {
-    background-color: #ad7100;
+    background-color: #ffffff;
     border-radius: 12px;
     padding: 20px;
     width: 250px;
