--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background: linear-gradient(to right,#9fa0a1, #996e00);
+    background: <img src="https://www.peleliuhistorical.org/images/history_battlefield.jpg"
+                alt="Theme">
     color: #000000;
     text-align: center;
 }
