--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ footer {
 }
 
 .tema-escuro header {
-  background-color:#000000;
+  background-color:#ff5900;
 }
 
 .tema-escuro footer {
@@ -193,7 +193,7 @@ footer {
 }
 
 .tema-escuro .conteudo-scroll {
-  background: #111821;
+  background: #47473b;
   border-color: #47473b;
 }
 
